Training Session/python/python-dictionary/comprehension.txt


  # elegant way of creating new dictionary in python
  # without using dict comprehension 

  >> my_dict = {}
>>> for i in range(5):
...    my_dict[i]=i**3
... 
>>> my_dict
{0: 0, 1: 1, 2: 8, 3: 27, 4: 64}

# optimized way by using comprehension method
>>> my_dict
{0: 0, 1: 1, 2: 8, 3: 27, 4: 64}
>>> my_dict = {a:a**3 for a in range(7)}
>>> my_dict
{0: 0, 1: 1, 2: 8, 3: 27, 4: 64, 5: 125, 6: 216}
# this is more pythonic way with shorter code

# here a:a means a is key and :a is value

# conditional with comprehension
>>> my_dict = {}
>>> for i in range(5):
...    if i % 2 ! = 0:
  File "<stdin>", line 2
    if i % 2 ! = 0:
             ^
SyntaxError: invalid syntax
>>> ...    if i % 2 ! = 0:
  File "<stdin>", line 1
    ...    if i % 2 ! = 0:
                    ^
SyntaxError: invalid syntax
>>> for i in range(5):
...    if i % 2 != 0:
...    my_dict[i]=i**3
  File "<stdin>", line 3
    my_dict[i]=i**3
    ^
IndentationError: expected an indented block
>>> for i in range(5):
... ...    if i % 2 != 0:
  File "<stdin>", line 2
    ...    if i % 2 != 0:
    ^
IndentationError: expected an indented block
>>> for i in range(5):
...     if i % 2 != 0:
...         my_dict[i]=i**3
... 
>>> print(my_dict)
{1: 1, 3: 27}
>>> 

# using conditional comprehension
>>> my_dict = {a: a**3 for a in range(5) if a % 2!= 0}
>>> my_dict
{1: 1, 3: 27}
# here not divisble of 2 values is generated




